# aoc2021

./: Cargo.toml  README.md  runall.sh
doc/: day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md
src/: day02.rs  day02a.rs  day02b.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs
