[package]
name = "aoc21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02a"
path = "src/day02a.rs"

[[bin]]
name = "day02b"
path = "src/day02b.rs"

[dependencies]
color-eyre = "0.5.11"
